dataset1235/2025-2/1955397009/users/3091828991/executions/1107611404_2819779400.log
== RUN (2025-08-22 19:50:52)
-- CODE: 
QuantJ = int(input("Quantidade de jogos a serem comprados: "))
ValorU = float(input("Valor unitário de cada jogo: "))
Valorf = float(input("Valor do frete: "))

ValorP= (QuantJ*ValorU)+ValorF
print("ValorP")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP= (QuantJ*ValorU)+ValorF
                            ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP= (QuantJ*ValorU)+ValorF
                            ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP= (QuantJ*ValorU)+ValorF
                            ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP= (QuantJ*ValorU)+ValorF
                            ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP= (QuantJ*ValorU)+ValorF
                            ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP= (QuantJ*ValorU)+ValorF
                            ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:53:13)
-- CODE: 
QuantJ = int(input("Quantidade de jogos a serem comprados: "))
ValorU = float(input("Valor unitário de cada jogo: "))
Valorf = float(input("Valor do frete: "))

ValorP = (QuantJ*ValorU)+ValorF
print("ValorP")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:51:37)
-- CODE: 
QuantJ = int(input("Quantidade de jogos a serem comprados: "))
ValorU = float(input("Valor unitário de cada jogo: "))
Valorf = float(input("Valor do frete: "))

ValorP = (QuantJ*ValorU)+ValorF
print("ValorP")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ValorP = (QuantJ*ValorU)+ValorF
                             ^^^^^^
NameError: name 'ValorF' is not defined. Did you mean: 'Valorf'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:57:45)
-- CODE: 
QuantJ = int(input("Quantidade de jogos a serem comprados: "))
ValorU = float(input("Valor unitário de cada jogo: "))
ValorF = float(input("Valor do frete: "))

ValorP = (QuantJ*ValorU)+ValorF
print(round(ValorP, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 162.6
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 19:58:33)
-- CODE: 
QuantJ = int(input("Quantidade de jogos a serem comprados: "))
ValorU = float(input("Valor unitário de cada jogo: "))
ValorF = float(input("Valor do frete: "))

ValorP = (QuantJ*ValorU)+ValorF
print(ValorP)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem comprados: Valor unitário de cada jogo: Valor do frete: 618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
